# libdeflate

./: CMakeLists.txt  GDeflate.h
